--- a/pandasai/assets/prompt_templates/viz_library.tmpl
+++ b/pandasai/assets/prompt_templates/viz_library.tmpl
@@ -1,1 +1,1 @@
-If you are asked to plot a chart, use "{library}" for charts, save as png.
+If you are asked to plot a chart, use "{library}" for charts, output json.
